Added html buttons and query selectors

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 class = "start"></h1>
     <button class = "startBtn"></button>
+    <h1 class = "question"></h1>
+    <button class = "answer1"></button>
+    <button class = "answer2"></button>
+    <button class = "answer3"></button>
+    <button class = "answer4"></button>
 </body>
 </html>
