--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
 </head>
 <body>
-    <h1 class = "start"></h1>
-    <button class = "startBtn"></button>
+    <h1 class = "start">Click on the button to start</h1>
+    <button class = "startBtn">Start</button>
     <h1 class = "question"></h1>
     <button class = "answer1"></button>
     <button class = "answer2"></button>
     <button class = "answer3"></button>
     <button class = "answer4"></button>
+    <script src="./script.js"></script>
 </body>
 </html>
