Added random generator to choose a question

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 class = "start">Click on the button to start</h1>
     <button class = "startBtn">Start</button>
     <h1 class = "question"></h1>
-    <button class = "answer1">Answer1</button>
+    <button class = "answer1"></button>
     <button class = "answer2"></button>
     <button class = "answer3"></button>
     <button class = "answer4"></button>
