--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <h1 class = "start">Click on the button to start</h1>
     <button class = "startBtn">Start</button>
     <h1 class = "question"></h1>
-    <button class = "answer1"></button>
-    <button class = "answer2"></button>
-    <button class = "answer3"></button>
-    <button class = "answer4"></button>
+    <div class = "answers">
+        <button class = "answer1"></button>
+        <button class = "answer2"></button>
+        <button class = "answer3"></button>
+        <button class = "answer4"></button>
+    </div>
+    <p class = "timer"></p>
     <script src="./script.js"></script>
 </body>
 </html>
