--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button class = "answer3"></button>
         <button class = "answer4"></button>
     </div>
+    <p class = "YesOrNo"></p>
     <p class = "timer"></p>
     <script src="./script.js"></script>
 </body>
