--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button class = "answer4"></button>
     </div>
     <p class = "yesOrNo"></p>
+    <p class = "score"></p>
     <p class = "timer"></p>
     <script src="./script.js"></script>
 </body>
