--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@700&display=swap" rel="stylesheet">
+
     <title>Document</title>
 </head>
 <body>
     <p class = "timer"></p>
     <h1 class = "start">Click on the button to start</h1>
-    <button class = "startBtn">Start</button>
+    <center><button class = "startBtn">Start</button></center>
     <h1 class = "question"></h1>
     <div class = "answers">
         <button class = "answer1"></button>
@@ -19,7 +21,8 @@
         <button class = "answer4"></button>
     </div>
     <p class = "yesOrNo"></p>
-    <p class = "score"></p>
+    <center><button class = "highScores">Submit Your Score</button></center>
+    <center><p class = "score"></p></center>
     <script src="./script.js"></script>
 </body>
 </html>
