Started adding highscores buttons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button class = viewHighScores>View High Scores</button>
     <p class = "timer"></p>
     <h1 class = "start">Click on the button to start</h1>
     <center><button class = "startBtn">Start</button></center>
@@ -21,7 +22,9 @@
         <button class = "answer4"></button>
     </div>
     <p class = "yesOrNo"></p>
-    <center><button class = "highScores">Submit Your Score</button></center>
+    <input type="text" id = "name" placeholder="Initials">
+    <center><button class = highScores>Submit Your Score</button></center>
+    <center><button class = initialBtn>Submit Your Initials</button></center>
     <center><p class = "score"></p></center>
     <script src="./script.js"></script>
 </body>
