Added final touches to highscores

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <center><button class = highScores>Submit Your Score</button></center>
     <center><button class = initialBtn>Submit Your Initials</button></center>
     <center><p class = "score"></p></center>
+    <ul class = "scorers">
+    </ul>
+    <button class = "close">Close</button>
     <script src="./script.js"></script>
 </body>
 </html>
